Sun Sep 11 03:38:09 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/build_sources.py:

          Fixed error that was preventing CUTS from building.

        * etc/scripts/setup.py:

          Rename of the script below.

          Enhanced script so it is possible to select what setup actions
          should be performed.

        * etc/scripts/download_sources.py:

          Removed this file.

Sat Sep 10 13:56:15 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/arch/ccm/CCM_Container_T.h:
        * cuts/arch/ccm/CCM_Container_T.inl:
        * cuts/arch/opensplice/handlers/handlers.mpc:
        * cuts/arch/rtidds/handlers/handlers.mpc:
        * cuts/arch/tcpip/handlers/handlers.mpc:

          Fixed build errors.

Fri Sep  9 15:28:40 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts:
        * etc/scripts/build_sources.py:
        * etc/scripts/mpc.py:

          Initial script for building sources. It is capable of building
          CUTS, DOC middleware, and XSC.

Wed Aug 31 01:04:46 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Updated the repo location of CUTS.

Fri Aug 26 06:20:47 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Removed the BMW project from the workspace.

        * CUTS_Runtime_Arch.mwc:

          Removed CCF from the workspace.

Thu Aug 18 20:17:53 UTC 2011  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/workers/CPU/CPU_Worker_T.h:
        * cuts/workers/CPU/CPU_Worker_T.cpp:

          Updated to pass the scaling factor as a command line argument.

Wed Aug 10 14:29:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/bmw.doxygen:

          Removed this file.

Thu Aug  4 19:54:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/generate_autobuild_properties.py:
